--- a/.github/workflows/wf_first.yml
+++ b/.github/workflows/wf_first.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v3.1.0
       with:
-        ${{ env.FILENAME }}
+        name: ${{ env.FILENAME }}
     env:
       FILENAME: XD.XD
   
